# electronics-shop-project

./: pyproject.toml
homework-2/: main.py
homework-5/: README.md
src/: item.py  items.csv  keyboard.py  phone.py
tests/: test_error.py  test_item.py  test_keyboard.py  test_phone.py
